# channel

./: Cargo.toml
.github/workflows/: build.yaml  pull-request.yaml
migrations/2022-09-29-101144_create__channel/: down.sql  up.sql
migrations/2022-09-30-025324_channel_price/: down.sql  up.sql
migrations/2022-10-02-040148_create_posts/: down.sql  up.sql
migrations/2022-10-02-042207_recreate_channels/: up.sql
migrations/2022-10-02-042347_create_posts/: up.sql
migrations/2022-10-03-023529_remove_posts/: down.sql  up.sql
migrations/2022-10-03-023627_renew_posts/: up.sql
migrations/2022-10-08-071050_update_channel/: down.sql  up.sql
migrations/2022-10-16-040801_add_channel_img/: down.sql  up.sql
migrations/2022-11-18-060535_updated_at/: up.sql
migrations/2023-02-02-124608_post_title/: down.sql  up.sql
src/: main.rs  schema.rs
src/channel/: handler.rs  mod.rs  model.rs  req.rs  res.rs
src/post/: handler.rs  mod.rs  model.rs  req.rs  res.rs  types.rs
