[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
dotenv = "0.15"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
openssl = "0.10"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version ="0.4.22", features= ["serde"] }
jsonwebtokens = "1.1.0"